# HTML2PDF

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  OVERVIEW.md  PLAN.md  README.md  reg-2-9-1.html
crates/htmltopdf/: Cargo.toml
crates/htmltopdf-cli/: Cargo.toml
crates/htmltopdf-cli/src/: main.rs
crates/htmltopdf-server/: Cargo.toml
crates/htmltopdf-server/src/: main.rs
crates/htmltopdf/src/: box_tree.rs  color.rs  dom.rs  font.rs  html.rs  image.rs  layout.rs  lib.rs  paint.rs  pdf.rs  script.rs  subset.rs
crates/htmltopdf/tests/: parity_tests.rs
crates/htmltopdf/tests/fixtures/combined/: invoice.html
crates/htmltopdf/tests/fixtures/edge-cases/: long-table.html  page-breaks.html  unicode.html
crates/htmltopdf/tests/fixtures/expectations/: combined_invoice.json  edge-cases_long-table.json  edge-cases_page-breaks.json  edge-cases_unicode.json  features_background-image.json  features_borders.json  features_box-model.json  features_calc.json  features_colors.json  features_custom-properties.json  features_fixed-per-page.json  features_flex-item.json  features_flex-wrap.json  features_flexbox.json  features_floats.json  features_font-face.json  features_font-family.json  features_generated-content.json  features_gradients.json  features_grid-2d.json  features_grid-areas.json  features_grid-rows.json  features_grid.json  features_images.json  features_inline-block.json  features_inline-images.json  features_line-height.json  features_links.json  features_lists.json  features_paged-media.json  features_pct-sizing.json  features_positioning.json  features_rich-cells.json  features_rowspan.json  features_rtl.json  features_sizing.json  features_tables.json  features_text-decoration.json  features_text-polish.json  features_typography.json  (+1 more)
crates/htmltopdf/tests/fixtures/features/: background-image.html  borders.html  box-model.html  calc.html  colors.html  custom-properties.html  fixed-per-page.html  flex-item.html  flex-wrap.html  flexbox.html  floats.html  font-face.html  font-family.html  generated-content.html  gradients.html  grid-2d.html  grid-areas.html  grid-rows.html  grid.html  images.html  inline-block.html  inline-images.html  line-height.html  links.html  lists.html  paged-media.html  pct-sizing.html  positioning.html  rich-cells.html  rowspan.html  rtl.html  sizing.html  tables.html  text-decoration.html  text-polish.html  typography.html  z-index.html
docs/: COVERAGE.md
docs/adr/: 0001-display-list-rendering-architecture.md  0002-dom-based-pipeline.md  0003-font-embedding.md  0004-flow-box-tree.md  0005-cid-unicode-font-embedding.md  0006-bounded-pre-layout-javascript.md  0007-raster-images.md  0008-live-dom-innerhtml-spike.md  0009-live-dom-tree-mutation.md
examples/: concurrency-simple.html  conversion-smoke.html  invoice.html  render-showcase.html
fixtures/: reg-2-9-1.metadata.md
scripts/: api-convert.sh  benchmark-concurrency.sh  compare-parity.sh  generate-references.sh  render-fixtures.sh
