[package]
name = "htmltopdf-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "htmltopdf"
path = "src/main.rs"

[features]
# Enable the bounded pre-layout JavaScript stage (forwards to htmltopdf/js).
js = ["htmltopdf/js"]

[dependencies]
htmltopdf = { path = "../htmltopdf" }
