[package]
name = "htmltopdf-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "htmltopdf-server"
path = "src/main.rs"

[features]
# Enables the `js=true` query parameter (bounded pre-layout JavaScript).
# Off by default: without it the parameter is rejected and no JS ever runs.
js = ["htmltopdf/js"]

[dependencies]
htmltopdf = { path = "../htmltopdf" }
tiny_http = "0.12"
