[package]
name = "htmltopdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
cssparser = "0.37.0"
flate2 = "1"
fontdb = "0.23.0"
html5ever = "0.39"
owned_ttf_parser = "0.25.1"
ttf-parser = "0.25.1"

[dev-dependencies]
# Reference DOM used only to verify the custom arena TreeSink builds the same
# tree (see dom.rs `matches_rcdom_reference_tree`). Not in the release binary.
markup5ever_rcdom = "0.39"
