[package]
name = "htmltopdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[features]
# Opt-in bounded pre-layout JavaScript stage (ADR 0006). Off by default to keep
# the dependency surface and build small.
js = ["dep:boa_engine", "dep:boa_gc"]

[dependencies]
cssparser = "0.37.0"
flate2 = "1"
fontdb = "0.23.0"
html5ever = "0.39"
owned_ttf_parser = "0.25.1"
rustybuzz = "0.20"
ttf-parser = "0.25.1"
boa_engine = { version = "0.20", optional = true }
boa_gc = { version = "0.20", optional = true }

[dev-dependencies]
# Reference DOM used only to verify the custom arena TreeSink builds the same
# tree (see dom.rs `matches_rcdom_reference_tree`). Not in the release binary.
markup5ever_rcdom = "0.39"
# Parity harness only (tests/parity_tests.rs): read expectation JSON and inflate
# FlateDecode content streams to assert on rendered text. Dev-only.
serde_json = "1"
flate2 = "1"
